fixed tweet single word overflow bug

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -4,8 +4,8 @@ nav {
   top: 0;
   left: 0;
   right: 0;
-
   height: 80px;
+  min-width: 450px;
   padding: 0 2em 0 2em;
 
   background-color: #00a087;
