--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -42,14 +42,18 @@ article.tweet header .handle {
 }
 
 article.tweet .content {
-  height: 60px;
+  min-height: 60px;
+  min-width: 360px;*/
   background-color: white;
   border-bottom: 1px solid #ddd;
   padding: 5px 10px;
   margin: 0;
+  vertical-align: middle;
+
   display: flex;
   align-items: center;
-  /*vertical-align: middle;*/
+  word-break: break-all;
+
 }
 
 article.tweet footer .timestamp{
